# dghandler

./: LICENSE  README.md  pyproject.toml  random_data.py  test.py
src/fhm/: __init__.py  __main__.py  handi.py  structure.py
src/pgx/: __init__.py  read_data.py  scores.py
src/varimp/: __init__.py  read_data.py
