[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"


[project]
name = "fhm"
version = "0.1.0"
description = "Bioinformatics toolkit"
authors = [
    {name = "Houcemeddine Othman"}
]
requires-python = ">=3.9"

dependencies = [
    "pandas",
]


[tool.setuptools.packages.find]
where = ["src"]
